syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nationconnect.identity.grpc";
option java_outer_classname = "IdentityProto";

service IdentityVerificationService {
  rpc verifyNationalId (IdentityRequest) returns (IdentityResponse);
}


message IdentityRequest {
  string nationalId = 1;
}

message IdentityResponse {
  bool valid = 1;
}